# DLS

./: .gitignore  Cargo-freebsd.toml  Cargo-minimal.toml  Cargo.toml  SPRINT4_PLAN.md  SPRINT5_PLAN.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml  security.yml
.history/: 2025-01-13_phase1-1_rust_environment_setup.md  2025-01-14_sprint2_phase2-1_dhcp_server_implementation.md  2025-01-14_sprint2_phase2-2_tftp_server_implementation.md  2025-01-14_sprint2_phase2-3_iscsi_server_implementation.md  2025-09-13_phase1-3_zfs_dataset_management.md  2025-09-13_phase1-4_image_storage_abstraction.md  2025-09-13_phase1-5_database_schema.md  2025-09-13_phase1-6_authentication_authorization.md  2025-09-13_phase1-7_monitoring_infrastructure.md  2025-09-13_phase1-8_freebsd_deployment_pipeline.md
deployment/: Makefile  README.md
deployment/configs/: production.toml
deployment/containers/: Dockerfile  docker-compose.yml
deployment/freebsd/: jail.conf
deployment/scripts/: deploy_freebsd.sh  test_deployment.sh
examples/: simple.rs
src/: analytics.rs  auth.rs  boot.rs  cli.rs  client.rs  cloud.rs  cluster.rs  config.rs  database.rs  disaster_recovery.rs  error.rs  lib.rs  main.rs  monitoring.rs  network.rs  optimization.rs  performance.rs  provisioning.rs  reporting.rs  security.rs  security_old.rs  storage.rs  tenant.rs  web.rs
src/ai/: anomaly_detection.rs  intelligent_ops.rs  mod.rs  nlp_interface.rs  predictive_analytics.rs
src/analytics_intelligence/: data_pipeline.rs  intelligent_insights.rs  ml_operations.rs  mod.rs  real_time_analytics.rs
src/cloud/: cloud_federation.rs  cross_platform_deployment.rs  hybrid_orchestrator.rs  mod.rs  multi_cloud.rs
src/edge/: distributed_storage.rs  edge_ai.rs  edge_node.rs  edge_orchestrator.rs  mod.rs
src/enterprise/: audit.rs  authentication.rs  authorization.rs  compliance.rs  enterprise_analytics.rs  governance.rs  licensing.rs  marketplace.rs  mod.rs
src/integration/: api_gateway.rs  event_streaming.rs  mod.rs  service_mesh.rs  workflow_engine.rs
src/network/: dhcp.rs  iscsi.rs  tftp.rs
src/production/: deployment_manager.rs  error_recovery.rs  health_monitor.rs  mod.rs  optimized_health_monitor.rs  performance_optimizer.rs  system_observer.rs
src/security/: legacy.rs  mod.rs  threat_detection.rs  zero_trust.rs
src/storage/: zfs.rs
templates/: compliance_audit.html  security_assessment.html
tests/: analytics_test.rs  auth_test.rs  cloud_test.rs  cloud_test.rs.disabled  database_test.rs  disaster_recovery_test.rs  integration_test.rs  monitoring_test.rs  reporting_test.rs  storage_test.rs  tenant_test.rs  zfs_test.rs
tests/common/: mod.rs
