[package]
name = "dls-server"
version = "0.1.0"
edition = "2021"
authors = ["Mario Cho <hephaex@gmail.com>"]
description = "Modern Diskless Boot System for Enterprise Environments"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Web framework and HTTP
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database (simplified for cross-compilation)
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "macros"], default-features = false }

# Networking
dhcproto = "0.14"

# Storage and ZFS - FreeBSD specific
libzetta = { version = "0.5", optional = true }

# Authentication and security (using native-tls instead of rustls for cross-compilation)
jwt-simple = "0.12"
argon2 = "0.5"
uuid = { version = "1.10", features = ["v4", "serde"] }
ldap3 = "0.11"
regex = "1.10"
rustls = "0.23"
rustls-pemfile = "2.0"
x509-parser = "0.16"
ring = "0.17"
base64 = "0.22"

# Monitoring and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.14"
metrics = "0.23"

# Configuration
config = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# Multi-tenancy and resource isolation
dashmap = { version = "6.1", features = ["serde"] }
parking_lot = "0.12"

# Cloud integration and hybrid deployment
# Note: Cloud SDK dependencies commented out to avoid version conflicts
# Uncomment and configure specific versions when implementing cloud providers
# aws-sdk-ec2 = "1.50"
# aws-sdk-s3 = "1.50" 
# aws-config = "1.5"
# azure_core = "0.20"
# azure_identity = "0.20"
# azure_mgmt_compute = "0.20"
# google-cloud-storage = "0.20"
# k8s-openapi = { version = "0.22", features = ["v1_30"] }
# kube = { version = "0.93", features = ["runtime", "derive"] }
# docker-api = "0.14"

# Advanced analytics and machine learning
ndarray = "0.15"
smartcore = "0.4"
linfa = "0.7"
plotters = "0.3"
statrs = "0.17"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Random number generation
rand = "0.9"

# Logging
log = "0.4"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
sha2 = "0.10.9"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
env_logger = "0.11"
log = "0.4"

[target.'cfg(target_os = "freebsd")'.dependencies]
libzetta = "0.3"

[features]
default = []
freebsd = ["libzetta"]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "dls-server"
path = "src/main.rs"

[[bin]]
name = "dls-cli"
path = "src/cli.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"
